<resources>
    <string name="app_name">GrillyApp</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDyvqfqX7dhKyv2-DQLtqrSD5_DdhMm0ns</string>

    <string name="sign_in_text">Sign In</string>
    <string name="login_password_text">Password..</string>
    <string name="login_email_text">Email..</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_welcome_to_text">Welcome to</string>
    <string name="register_name_text">Name..</string>
    <string name="register_create_your_grilly_account">Create your Grilly \n account</string>
    <string name="login_failed">Check the entered parameters</string>
    <string name="input_failed">Fill in all the fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>