<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_background"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66303A52"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register_create_your_grilly_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/registerNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_round_white"
        android:ems="10"
        android:hint="@string/register_name_text"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/registerEmailInput"
        app:layout_constraintEnd_toEndOf="@+id/registerEmailInput"
        app:layout_constraintStart_toStartOf="@+id/registerEmailInput" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_text"
        android:background="@drawable/background_round_white"
        app:layout_constraintBottom_toTopOf="@+id/registerPasswordInput"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:paddingEnd="36dp"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password_text"
        android:background="@drawable/background_round_white"
        app:layout_constraintBottom_toTopOf="@+id/registerSignUpButton"
        app:layout_constraintEnd_toEndOf="@+id/registerSignUpButton"
        app:layout_constraintStart_toStartOf="@+id/registerSignUpButton" />

    <ImageView
        android:id="@+id/registerShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/registerPasswordInput"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput"
        app:layout_constraintTop_toTopOf="@+id/registerPasswordInput"
        app:srcCompat="@drawable/ic_password_visible" />

    <Button
        android:id="@+id/registerSignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/background_round_pink"
        app:layout_constraintBottom_toTopOf="@+id/registerSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in_text"
        android:textColor="#E6FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>